[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dialact-eval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "shuo @ file://../voice-agent",
    "pydantic-ai-slim[groq]>=0.2.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "deepeval>=1.0.0",
]

[project.scripts]
dialact-eval = "cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live API keys (GROQ_API_KEY, etc.)",
]

[tool.setuptools.packages.find]
include = ["core*", "eval*", "ui*"]

[tool.setuptools.package-dir]
"" = "."
